Add s3 uploading profile-pic handler
